@@ -1,4 +1,3 @@
-import groovy.xml.dom.DOMCategory.attributes
 import net.silver.buildsrc.BuildMeta
 import sun.jvmstat.monitor.MonitoredVmUtil.jvmArgs
 
@@ -18,23 +17,21 @@ tasks.jar {
 
 
 dependencies {
-    implementation(BuildMeta.Libs.MOQUETTE)
-
+    implementation("org.apache.activemq:activemq-broker:6.2.0")
+    implementation("org.apache.activemq:activemq-client:6.2.0")
+    implementation("org.apache.activemq:activemq-mqtt:6.2.0")
     testImplementation(BuildMeta.Libs.JUNIT_API)// JUnit 5 API for compiling tests
     testImplementation(BuildMeta.Libs.JUNIT_JUPITER)// JUnit 5 Engine for running tests (runtime only)
     testRuntimeOnly(BuildMeta.Libs.JUNIT_PLATFORM)
 
 }
-
 tasks.test {
     useJUnitPlatform()
 }
-tasks.withType<JavaCompile>().configureEach {
+tasks.withType<JavaCompile> {
     options.compilerArgs.addAll(
         listOf(
-            // Key fix: Explicitly set the --module-path for the compiler
-            // This was the fix for the compilation failure
-            "--module-path", configurations.getByName("runtimeClasspath").asPath
+            "--add-reads", "net.silver.services=ALL-UNNAMED"
         )
     )
 }
